unpackaged/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <label>Target</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>