unpackaged/main/default/objects/Target__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
                <default>true</default>
                <label>UK</label>
            </value>
            <value>
                <fullName>No Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>