unpackaged/main/default/objects/Target__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>North West AM</fullName>
                <label>North West - AM</label>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>London AM</fullName>
                <label>London - AM</label>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>