unpackaged/main/default/objects/Target__c/fields/Target_Month__c.field-meta.xml
<CustomField>
    <fullName>Target_Month__c</fullName>
    <externalId>true</externalId>
    <label>Target Month</label>
    <length>30</length>
    <type>Text</type>
</CustomField>