unpackaged/main/default/objects/Target__c/listViews/UK_Forecasts.listView-meta.xml
<ListView>
    <fullName>UK_Forecasts</fullName>
    <columns>Region__c</columns>
    <columns>Month__c</columns>
    <columns>Target__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2015</value>
    </filters>
    <label>UK Forecasts 2015</label>
</ListView>