unpackaged/main/default/objects/Target__c/listViews/UK_Targets_All.listView-meta.xml
<ListView>
    <fullName>UK_Targets_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Region__c</columns>
    <columns>Target__c</columns>
    <columns>Target_Month__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>UK Targets - All</label>
    <sharedTo>
        <role>MDM_UK</role>
    </sharedTo>
</ListView>